--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href="#">
           <img
             class="logo"
-            src="images/New-AC-logo.png"
+            src="images/ultimate-AC-logo.png"
             alt="logo, go to home"
           />
         </a>
