--- a/index.html
+++ b/index.html
@@ -204,25 +204,25 @@
         please get in touch.
       </h3>
       <form id="form" action="https://formspree.io/f/xgedjgpg" method="post">
-        <input
-          id="UserName"
+         <input
+          id="name"
           name="name"
           type="text"
-          placeholder="Enter your full name"
+          placeholder="Full Name"
           maxlength="30"
           required
-          />
-        <input
+        />
+         <input
           id="email"
           name="email"
           type="email"
-          placeholder="Enter your Email Address"
+          placeholder="Email Address"
         />
         <textarea
           aria-label="write your message and I'll get back to you."
           id="message"
           name="message"
-          placeholder="Enter your text here"
+          placeholder="Enter text here"
           maxlength="500"
         ></textarea>
         <div class="submit-container">
@@ -236,7 +236,6 @@
         </div>
       </form>
     </section>
-
     <footer class="footer">
       <ul class="social-icons">
         <li>
